# archmaster

./: .gitignore  CMakeLists.txt  README.md  archmaster  archmaster.desktop  debug_log.txt  new.json
.cache/clangd/index/: AURClient.cpp.1480BF5F8CCB331F.idx  AURClient.h.D151FF111338A6F6.idx  AnalyticsView.cpp.B76EAA9C62B6B493.idx  AnalyticsView.h.420D88DAB45545F2.idx  ChartPopup.cpp.BAFC69021C178EDF.idx  ChartPopup.h.B02916438390C7AE.idx  Config.cpp.3758E91529B644AB.idx  Config.h.C7683DF84E117541.idx  ControlPanel.cpp.335A784C5F71EC71.idx  ControlPanel.h.E1E732D77F5E58C6.idx  Database.cpp.2F7B61B90780CA76.idx  Database.h.553C055B8569EC02.idx  DependencyGraphPopup.cpp.B22BB1135EB757E9.idx  DependencyGraphPopup.h.9F5E7E06FF43D868.idx  DependencyGraphWidget.cpp.829653ABC26C4911.idx  DependencyGraphWidget.h.2D3A73745A4BC501.idx  FileAccessTracker.cpp.AB83CDF33EB282AC.idx  FileAccessTracker.h.8C249740BCF6E16C.idx  LoadingOverlay.cpp.3E732943335AFAEA.idx  LoadingOverlay.h.0E1B44D2F7E1B019.idx  MainWindow.cpp.02ACDE5DA26077EE.idx  MainWindow.h.8666019B3CDDC8C7.idx  Package.cpp.4DCD6344B3996872.idx  Package.h.EC29B48CDD44DDE3.idx  PackageListModel.cpp.ADC257435D63E32E.idx  PackageListModel.h.EBAB44BC29CEFB16.idx  PackageManager.cpp.C31329D882060C34.idx  PackageManager.h.818E8335119F41A5.idx  PackageView.cpp.3BCFD58FB132AA40.idx  PackageView.h.8D9B975FA7E6CFB6.idx  PacmanConfig.cpp.97E0CBB5020149CA.idx  PacmanConfig.h.8315A06E4FF059AA.idx  PrivilegedRunner.cpp.AC3306BAC2BE6332.idx  PrivilegedRunner.h.AAC7E3201C267627.idx  ProfileManager.cpp.6C60BF965CABDF5A.idx  ProfileManager.h.217B177517763A0D.idx  ProfileView.cpp.6F13575325FD060C.idx  ProfileView.h.9D40CD16E838A06C.idx  SearchView.cpp.7EEE88194FAE1B18.idx  (+6 more)
resources/: archmaster.desktop  resources.qrc
scripts/: install_deps.sh  setup.sh
src/: main.cpp
src/core/: AURClient.cpp  AURClient.h  Database.cpp  Database.h  PackageManager.cpp  PackageManager.h  PacmanConfig.cpp  PacmanConfig.h  ProfileManager.cpp  ProfileManager.h
src/models/: Package.cpp  Package.h  PackageListModel.cpp  PackageListModel.h
src/ui/: AnalyticsView.cpp  AnalyticsView.h  ChartPopup.cpp  ChartPopup.h  ControlPanel.cpp  ControlPanel.h  LoadingOverlay.cpp  LoadingOverlay.h  MainWindow.cpp  MainWindow.h  PackageView.cpp  PackageView.h  PrivilegedRunner.cpp  PrivilegedRunner.h  ProfileView.cpp  ProfileView.h  SearchView.cpp  SearchView.h  UpdateManager.cpp  UpdateManager.h
src/utils/: Config.cpp  Config.h
